# QC-Talks

Australia/: AAS Report.doc  QuantumRobots.ppt  Research Report.doc  imps.tex
ESI/: QuantumRobots.ppt
GeneralExam/: WeaponsOfMassSimulation.odp
Halloway09/: .bzrignore  Makefile  Reimbursement.xls  talk.aux  talk.leo  talk.nav  talk.out  talk.tex  talk.toc
PHYS576/: #common.py#  common.py  fonts.py  fonts.py~  georgia_b.slf  intro.py  intro.py~  minion_i.slf  myriad.slf  myriad_bi.slf  phaser.py~  resources.py  resources.py~  runme.py~  times.slf  wingding.slf
PHYS576/slithy/: #dr_xform.c#  Makefile  Makefile~  README.Apple  SlSoggy.py  anim.py  colors.py  controller.py  diafont.c  diafont.h  diafont.pyd  diaimage.c  diaimage.h  diaimage.pyd  dobj.pyd  dr_bezier.c  dr_color.c  dr_draw.c  dr_draw.h  dr_grid.c  dr_image.c  dr_mark.c  dr_path.c  dr_stack.c  dr_text.c  dr_wide.c  dr_xform.c  draw.pyd  dxvideo.cpp  dxvideo.h  dxvideo.pyd  error.py  fontconvert.py  library.py  macros.py  main.py  ob_opengl.c  ob_slsoggy.c  ob_slsoggy.c~  objects.py  (+20 more)
PHYS576/slithy/diafont/: diafont.vcproj
PHYS576/slithy/diaimage/: diaimage.vcproj
PHYS576/slithy/dobj/: dobj.vcproj
PHYS576/slithy/draw/: draw.vcproj
PHYS576/slithy/dxvideo/: dxvideo.vcproj
SIAM09/: Makefile  SIAM09Talk.leo  talk.aux  talk.nav  talk.out  talk.tex  talk.toc
SQuInT/: InfiniteOpenProductState.py  InfiniteTransverseIsingModelSimulator.py  Presentation.leo  courier_b.slf  ehrhardt.slf  fonts.py  logo-redesign.py  logo.py  logo.py~  minion.slf  myriad_b.slf  objects.py  phaser.py  presentation.py  runme.py  slides.py  test.py~  test2.py  test2.py~
SQuInT/quickening-0.1.2/: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  main.c  quickening
SQuInT/quickening-0.1.2/.deps/: quickening-main.Po
SQuInT/quickening-0.1.2/adt/: Makefile  Makefile.am  Makefile.in  alert.lo  base64.c  base64.h  base64.lo  bench-recursively  bench-recursively.c  bloom.c  bloom.h  bloom.lo  buffer.c  buffer.h  buffer.lo  check_base64  check_base64.c  check_fmt  check_fmt.c  check_misc  check_misc.c  check_radix  check_radix.c  check_sashimi  check_sashimi.c  check_si  check_si.c  check_socket_printf  check_socket_printf.c  check_string_bind  check_string_bind.c  check_typed_hash  check_typed_hash.c  commando.c  commando.h  commando.lo  configaro.c  configaro.h  configaro.lo  daemon.c  (+102 more)
SQuInT/quickening-0.1.2/adt/.deps/: alert.Plo  base64.Plo  bench-recursively.Po  bloom.Plo  buffer.Plo  check_base64.Po  check_fmt.Po  check_misc.Po  check_radix.Po  check_sashimi.Po  check_si.Po  check_socket_printf.Po  check_string_bind.Po  check_typed_hash.Po  commando.Plo  configaro.Plo  daemon.Plo  disjoint_set.Plo  distribution.Plo  eventqueue.Plo  filetest.Plo  globber.Plo  graphing_ts.Plo  hashes.Plo  hashtable.Plo  hprop.Plo  hpropinterface.Plo  join.Plo  lamefmt.Plo  link_matrix.Plo  log.Plo  postgresql.Plo  progress.Plo  queue.Plo  radix.Plo  recursively.Plo  red_transitive.Plo  sashimi.Plo  sashimitimer.Plo  set.Plo  (+10 more)
SQuInT/quicktime-frames/: productive_use_of_time.mov
