AC_INIT(Quickening, 0.1.2, bugs@scriptroute.org, quickening)
AC_CONFIG_SRCDIR(main.c)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

AC_NSPRING_CHECK_CACHE

dnl Checks for programs.
AC_NSPRING_PROG_CC
AC_NSPRING_WERROR
AC_NSPRING_ADT
AC_NSPRING_PROF_COV_DMALLOC_OPTIONS
AC_NSPRING_NO_PTHREAD
AC_NSPRING_APPEASE_SYSTEM_H
AC_NSPRING_STATIC_LINK

AC_PROG_RANLIB

AC_OUTPUT(adt/Makefile Makefile)
